# c64usb

./: .gitignore  meson.build
C64USB/: C64.kicad_sym  C64USB.kicad_pcb  C64USB.kicad_pro  C64USB.kicad_sch  fp-lib-table  sym-lib-table
C64USB/C64.pretty/: C64_Keyboard_Header.kicad_mod
cross/: c64usb.txt
src/: hid_report.c  hid_report.h  keymaps.c  keymaps.h  main.c  pin.c  pin.h  timer.c  timer.h  usb_hid_keys.h  usbconfig.h  util.h
